# f5_auth

./: README.md  config.py  migrations.sh  pyproject.toml
app/: main.py
app/adapters/: login.py
app/adapters/register/: confirm.py  create.py
app/adapters/user/: forget.py
app/api/: __init__.py
app/api/login/: dependencies.py  router.py
app/api/register/confirm/: dependencies.py  router.py
app/api/register/create/: dependencies.py  router.py
app/api/user/forget/: dependencies.py  router.py
app/base/api/: factory.py  router.py
app/core/login/: models.py  ports.py  services.py
app/core/register/confirm/: models.py  ports.py  service.py
app/core/register/create/: models.py  ports.py  service.py
app/core/user/forget/: models.py  ports.py  service.py
app/libs/: captcha.py  do_requests.py
app/libs/common/: auth_handler.py  constants.py  messages.py  utils.py
app/libs/exception/: base.py  service.py
app/libs/mail/: send_mail.py  textfile.txt
app/libs/mysql/: alembic.ini  session.py
app/libs/mysql/migration/: env.py
app/libs/mysql/migration/versions/: 9090576bb485_create_register_user_table.py  f23beb7a194a_add_password_updated_at_to_user.py
app/libs/mysql/models/: __init__.py  register.py  user.py
app/libs/redis/: constants.py  redis_client.py
