[tool.poetry]
name = "f5-auth"
version = "0.1.0"
description = ""
authors = ["tf_01"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.6"}
pydantic-settings = "^2.7.0"
sqlmodel = "^0.0.22"
alembic = "^1.14.0"
mysqlclient = "^2.2.6"
pyjwt = "^2.10.1"
bcrypt = "^4.2.1"
redis = {extras = ["hiredis"], version = "^5.2.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
